Atualizações no protótipo da página web

--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -13,7 +13,7 @@
     >
     <title>Exercício Aula 16</title>
     <link rel="stylesheet" href="Código-CSS.css">
-    <link rel="icon" href="Logo-TechVanguard.png">
+    <link rel="icon" href="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png">
   </head>
 
   <body>
@@ -26,11 +26,11 @@
             target="_blank"
             ><img
               class="iLogo-TechVanguard"
-              src="Logo-TechVanguard.png"
+              src="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png"
               alt="Logo-TechVanguard"
           ></a>
           <ul class="conteiner-menu">
-            <li><a href="#" target="_blank">Home</a></li>
+            <li><a href="#" target="_top">Home</a></li>
             <li><a href="#" target="_blank">Services</a></li>
             <li><a href="#" target="_blank">Portfólio</a></li>
             <li><a href="#" target="_blank">Blog</a></li>
@@ -44,15 +44,15 @@
       <nav>
         <div class="Menu-nav">
           <p><a href="#one">Features</a></p>
-          <p><a href="#two">About</a></p>
-          <p><a href="#three">Statics</a></p>
-          <p><a href="#four">Info</a></p>
+          <p><a href="#two">Plans</a></p>
+          <p><a href="#three">Statistics</a></p>
+          <p><a href="#four">About</a></p>
         </div>
       </nav>
     </div>
     <!--CONTEÚDO DA PÁGINA-->
     <div class="Features" id="one">
-      <img src="Logo-TechVanguard.png" alt="Logo" >
+      <img src="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png" alt="Logo" >
       <div class="text-Features">
         <h1>TECHVANGUARDA</h1>
         <br >
@@ -72,8 +72,7 @@
           </li>
           <li>Suporte ao cliente disponível a qualquer momento.</li>
           <li>
-            Mantenha-se protegido com nossa criptografia de última geração.Fique
-            atualizado com nossas últimas notícias e atualizações.
+            Mantenha-se protegido com nossa criptografia de última geração.
           </li>
           <li>Compartilhe descobertas com amigos via redes sociais.</li>
           <li>Experimente em dispositivos móveis.</li>
@@ -90,12 +89,23 @@
       <button type="submit" name="confira" id="iconfira">CONFIRA!</button>
     </div>
 
-    <div class="p2" id="two"></div>
+    <div class="p2" id="two">
+      <h1>NOSSOS PLANOS</h1>
+      <div class="plan01">
+        <h2>PLANO MENSAL</h2>
+      </div>
+      <div class="plan02">
+        <h2>PLANO ANUAL</h2>
+      </div>
+      <div class="plan03">
+        <h2>PLANO VITALÍCIO</h2>
+      </div>
+    </div>
     <div class="p3" id="three">
       <p>Teste 03</p>
     </div>
     <div class="p4" id="four">
-      <p>Teste 04</p>
+      <h1>TUDO SOBRE A TECHVANGUARDA</h1>
     </div>
   </body>
 </html>
