--- a/HTML/Aulas Udemy/Aula 20 - Revisão de HTML e CSS/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 20 - Revisão de HTML e CSS/Código-HTML.html
@@ -3,81 +3,8 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Código-CSS.css">
     <title>Exercícios aula 20</title>
-    <style>
-      * {
-        box-sizing: border-box;
-        padding: 0;
-        margin: 0;
-      }
-
-      /*MENU GERAL*/
-      .menu {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-          sans-serif;
-        color: white;
-      }
-
-      /*MENU CABEÇÁRIO*/
-      .menu .menu-header {
-        height: 60px;
-        background-color: #2d3142;
-        position: fixed;
-        width: 100%;
-        text-transform: uppercase;
-      }
-      .menu .menu-header ul {
-        list-style-type: none;
-        display: flex;
-      }
-      .menu-header ul li:hover {
-        background-color: #161821;
-      }
-      .menu-header ul li {
-        padding: 19px 20px;
-      }
-      .menu-header ul li a {
-        color: white;
-        text-decoration: none;
-      }
-
-      /*MENU SECUNDÁRIO*/
-      .Links {
-        height: 90px;
-        background-color: #4f5d75;
-        text-transform: uppercase;
-      }
-      .Links ul {
-        display: flex;
-        list-style-type: none;
-      }
-      .Links ul li {
-        margin-top: 60px;
-        padding-top: 5px;
-        padding-bottom: 3px;
-        padding-left: 40px;
-        padding-right: 40px;
-      }
-      .Links ul li:hover {
-        background-color: #161821;
-      }
-      .Links ul li a {
-        color: white;
-        text-decoration: none;
-      }
-      /*PÁGINAS*/
-      .pages {
-        height: 200vh;
-      }
-      #one-page {
-        height: 100vh;
-        background-color: #ef8354;
-      }
-      #two-page {
-        background-color: white;
-      }
-    </style>
   </head>
   <body>
     <!--SEÇÃO DOS MENUS-->
