Add planos comerciais

--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -92,13 +92,22 @@
     <div class="p2" id="two">
       <h1>NOSSOS PLANOS</h1>
       <div class="plan01">
-        <h2>PLANO MENSAL</h2>
+        <h2>PLANO MENSAL - R$29,99/mês</h2>
+        <h3>Desbloqueie o Futuro Agora!</h3>
+        <p>Assine nosso plano mensal por apenas R$29,99 e tenha acesso instantâneo aos nossos recursos premium. Navegue com facilidade, receba suporte prioritário e esteja sempre à frente no mundo da tecnologia. Junte-se a nós e transforme sua experiência online!</p>
+        <button type="submit" name="Comprar" id="iComprar">COMPRAR!</button>
       </div>
       <div class="plan02">
-        <h2>PLANO ANUAL</h2>
+        <h2>PLANO ANUAL - R$249,99/ano</h2>
+        <h3>Economize e Explore Sem Limites!</h3>
+        <p>Economize mais de 30% com nosso plano anual por apenas R$249,99 por ano. Além dos recursos premium, receba atualizações exclusivas, ofertas especiais e participe de eventos restritos para membros. Explore a inovação sem limites e faça parte de uma comunidade tecnológica única!</p>
+        <button type="submit" name="Comprar" id="iComprar">COMPRAR!</button>
       </div>
       <div class="plan03">
-        <h2>PLANO VITALÍCIO</h2>
+        <h2>PLANO VITALÍCIO - R$499,99 (pagamento único)</h2>
+        <h3>Para uma Jornada Sem Fim!</h3>
+        <p>Faça um investimento único de R$499,99 e desfrute dos benefícios da TechVanguarda para sempre! Acesso vitalício aos nossos recursos mais avançados, atualizações automáticas e vantagens exclusivas. Esta é sua chance de embarcar em uma jornada tecnológica sem fim, sem preocupações de renovação!</p>
+        <button type="submit" name="Comprar" id="iComprar">COMPRAR!</button>
       </div>
     </div>
     <div class="p3" id="three">
