Exercícios sobre imagens HTML

--- a/HTML/Curso em video/EX004/EX004.html
+++ b/HTML/Curso em video/EX004/EX004.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Testando cargas e imagens</h1>
-    <p></p>
+    <p>Abaixo estão imagens que se encontram na mesma pasta:</p>
+    <img src="logo-html.png" alt="Logo HTML5">
+    <p>Também podemos carregar imagens que encontram-se em sub-pastas:</p>
+    <img src="Imagens/logo-css.png" alt="Logo CSS3">
+    <p>Também podemos carregar imagens externas:</p>
+    <img src="https://cdn.iconscout.com/icon/free/png-256/free-javascript-23-1174949.png" alt="Logo W3C com direitos autorais">
 </body>
 </html>
