Aprendizado do curso

--- a/HTML/Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -13,7 +13,7 @@
     >
     <title>Exercício Aula 16</title>
     <link rel="stylesheet" href="Código-CSS.css">
-    <link rel="icon" href="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png">
+    <link rel="icon" href="Images/Logo-TechVanguard.png">
   </head>
 
   <body>
@@ -26,7 +26,7 @@
             target="_blank"
             ><img
               class="iLogo-TechVanguard"
-              src="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png"
+              src="Images/Logo-TechVanguard.png"
               alt="Logo-TechVanguard"
           ></a>
           <ul class="conteiner-menu">
@@ -52,7 +52,7 @@
     </div>
     <!--CONTEÚDO DA PÁGINA-->
     <div class="Features" id="one">
-      <img src="/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Images/Logo-TechVanguard.png" alt="Logo" >
+      <img src="Images/Logo-TechVanguard.png" alt="Logo" >
       <div class="text-Features">
         <h1>TECHVANGUARDA</h1>
         <br >
