Estudo de lista HTML

--- a/HTML/Curso em video/EX009/index.html
+++ b/HTML/Curso em video/EX009/index.html
@@ -6,6 +6,40 @@
     <title>Listas Ol e Ul</title>
 </head>
 <body>
-    
+    <h1>Trabalhando com Listas</h1>
+    <h2>Listas Ordenadas</h2>
+    <ol type="A">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ol>
+    <ol type="a">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ol>
+    <ol type="1">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ol>
+    <ol type="I">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ol>
+    <ol type="i">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ol>
+    <h2>Listas não ordenadas</h2>
+    <ul type="circle">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ul>
+    <ul type="square">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ul>
+    <ul type="disk">
+        <li>Jp</li>
+        <li>Jp</li>
+    </ul>
 </body>
 </html>
