Continuação de estudos sobre listas

--- a/HTML/Curso em video/EX009/index.html
+++ b/HTML/Curso em video/EX009/index.html
@@ -1,45 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listas Ol e Ul</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Trabalhando com Listas</h1>
     <h2>Listas Ordenadas</h2>
     <ol type="A">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ol>
     <ol type="a">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ol>
     <ol type="1">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ol>
     <ol type="I">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ol>
     <ol type="i">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ol>
     <h2>Listas não ordenadas</h2>
     <ul type="circle">
-        <li>Jp</li>
-        <li>Jp</li>
+      <!-- disc circle square -->
+      <li>Jp</li>
+      <li>Jp</li>
     </ul>
     <ul type="square">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ul>
     <ul type="disk">
-        <li>Jp</li>
-        <li>Jp</li>
+      <li>Jp</li>
+      <li>Jp</li>
     </ul>
-</body>
+    <h2>Linguagens que quero aprender</h2>
+    <ol>
+      <li>Javascript</li>
+      <ul type="square">
+        <li>Typescript</li>
+        <li>NodeJs</li>
+      </ul>
+      <li>Python</li>
+      <li>PHP</li>
+    </ol>
+    <h2>Jogos Prediletos</h2>
+    <ol>
+      <li>Ps2</li>
+      <ol type="a">
+        <li>God of War</li>
+        <li>DBZ Tencaichi 3</li>
+      </ol>
+      <li>PC</li>
+      <ol type="a" start="3">
+        <li>Elden Ring</li>
+        <li>Harry potter</li>
+      </ol>
+    </ol>
+    <h2>Definições</h2>
+    <dl>
+      <dt>HTML</dt>
+      <dd>
+        Linguagem de marcação utilizada para definir a parte escrita de uma
+        página web
+      </dd>
+      <dt>CSS</dt>
+      <dd>
+        Linguagem de marcação utilizada para modificação de elementos gráficos
+        da página web.
+      </dd>
+    </dl>
+  </body>
 </html>
